--- a/src/css/_settings.css
+++ b/src/css/_settings.css
@@ -34,9 +34,9 @@
   --fontFamilySystem: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-  --transitionSpeedFast: 200ms;
-  --transitionSpeedDefault: 300ms;
-  --transitionSpeedSlow: 500ms;
+  --transitionFast: 200ms;
+  --transitionDefault: 300ms;
+  --transitionSlow: 500ms;
 
   --maxWidth: 700px;
 }
