--- a/src/css/_settings.css
+++ b/src/css/_settings.css
@@ -4,7 +4,7 @@
   --lg: 1280px;
   --xl: 1440px;
 
-  --colorBlack: hsl(0, 0%, 10%);
+  --colorBlack: hsl(0, 0%, 16%);
   --colorWhite: hsl(0, 0%, 98%);
   --colorHighlight: hsl(48, 24%, 94%);
 
@@ -19,12 +19,6 @@
   --colorLinenDefault: hsl(35, 10%, 85%);
   --colorLinenLight: hsl(35, 30%, 86%);
 
-  --colorRedDefault: hsl(351, 64%, 55%);
-  --colorRedTranslucent: hsl(351, 64%, 55%, 0.25);
-
-  --colorCyanDefault: hsl(186, 100%, 73%);
-  --colorCyanTranslucent: hsl(186, 100%, 73%, 0.25);
-
   --backgroundColor: var(--colorLinen);
   --backgroundOverlayColor: hsl(0, 0%, 100%, 0.4);
   --textColor: var(--colorBlack);
@@ -34,10 +28,17 @@
   --fontFamilySystem: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
+  --spaceDefault: 1.5rem;
+  --spaceMedium: 4rem;
+  --spaceLarge: 8rem;
+
+  --transitionFaster: 50ms;
   --transitionFast: 200ms;
   --transitionDefault: 300ms;
   --transitionSlow: 500ms;
+  --transitionSlower: 800ms;
 
+  --gutter: var(--spaceDefault);
   --maxWidth: 700px;
 }
 
