--- a/src/css/_settings.css
+++ b/src/css/_settings.css
@@ -28,6 +28,15 @@
   --fontFamilySystem: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
+  --fontSizeSmallest: 0.6rem;
+  --fontSizeSmaller: 0.7rem;
+  --fontSizeSmall: 0.8rem;
+  --fontSizeDefault: 1rem;
+  --fontSizeMedium: 1.125rem;
+  --fontSizeLarge: 1.5rem;
+  --fontSizeLarger: 2rem;
+  --fontSizeLargest: 2.75rem;
+
   --spaceDefault: 1.5rem;
   --spaceMedium: 4rem;
   --spaceLarge: 8rem;
