--- a/src/css/_settings.css
+++ b/src/css/_settings.css
@@ -23,9 +23,9 @@
   --fontFamilySystem: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-  --fontSizeSmallest: 0.6rem;
-  --fontSizeSmaller: 0.7rem;
-  --fontSizeSmall: 0.8rem;
+  --fontSizeSmallest: 0.8rem;
+  --fontSizeSmaller: 0.8rem;
+  --fontSizeSmall: 0.9rem;
   --fontSizeDefault: 1rem;
   --fontSizeMedium: 1.125rem;
   --fontSizeLarge: 1.5rem;
@@ -42,6 +42,14 @@
 
   --gutter: var(--spaceDefault);
   --maxWidth: 700px;
+}
+
+@media (min-width: 480px) {
+  :root {
+    --fontSizeSmallest: 0.6rem;
+    --fontSizeSmaller: 0.7rem;
+    --fontSizeSmall: 0.8rem;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
