Improve type heirarchy

--- a/src/css/_settings.css
+++ b/src/css/_settings.css
@@ -6,7 +6,7 @@
   --colorGreyDarker: hsl(0, 0%, 22.35%);
   --colorGreyDark: hsl(0, 0%, 30%);
   --colorGreyDefault: hsl(0, 0%, 35%);
-  --colorGreyLight: hsl(0, 0%, 50%);
+  --colorGreyLight: hsl(0, 0%, 44%);
   --colorGreyLighter: hsl(0, 0%, 70%);
   --colorGreyLightest: hsl(0, 0%, 94%);
 
@@ -17,6 +17,7 @@
   --backgroundColor: var(--colorLinen);
   --backgroundOverlayColor: hsl(0, 0%, 100%, 0.4);
   --textColor: var(--colorBlack);
+  --colorFaded: var(--colorGreyLight);
 
   --fontFamilySerif: CNW, Georgia, 'Times New Roman', Times, serif;
   --fontFamilySansSerif: USW, -apple-system, sans-serif;
