--- a/src/css/prism-theme.css
+++ b/src/css/prism-theme.css
@@ -1,5 +1,5 @@
 :root {
-  --codeBackgroundColor: #1a1a1a;
+  --codeBackgroundColor: var(--colorGreyDarker);
   --codeColor: #f0f0f0;
   --codeCyan: #64edff;
   --codeGreen: #67ffb8;
@@ -63,6 +63,7 @@ pre[class*='language-'] {
 
 @media (min-width: 800px) {
   pre[class*='language-'] {
+    border-radius: 0.5rem;
     margin-left: -1.5rem;
     margin-right: -1.5rem;
   }
