--- a/src/css/elements.css
+++ b/src/css/elements.css
@@ -136,6 +136,7 @@ p {
   margin-top: 0;
   margin-bottom: var(--spaceDefault);
   color: var(--colorGreyDarker);
+  font-size: 0.95rem;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -263,4 +264,8 @@ blockquote p {
   blockquote::before {
     left: -2.75rem;
   }
+}
+
+mark {
+  background-color: var(--colorHighlight);
 }
