--- a/src/css/elements.css
+++ b/src/css/elements.css
@@ -34,11 +34,13 @@ body::after {
   animation-timing-function: steps(10);
   background-image: url('/images/textures/noise.png');
   background-repeat: repeat;
+  background-size: 100px;
   content: '';
   display: block;
   height: 300vh;
   left: -100vw;
   opacity: 0.25;
+  opacity: 0.5;
   pointer-events: none;
   position: fixed;
   top: -100vh;
