--- a/src/css/_settings.css
+++ b/src/css/_settings.css
@@ -1,26 +1,30 @@
 :root {
   --colorBlack: hsl(0, 0%, 16%);
-  --colorWhite: hsl(0, 0%, 98%);
+  --colorWhite: hsl(0, 0%, 95%);
   --colorHighlight: hsl(48, 24%, 94%);
 
   --colorGreyDarker: hsl(0, 0%, 22.35%);
   --colorGreyDark: hsl(0, 0%, 30%);
   --colorGreyDefault: hsl(0, 0%, 35%);
-  --colorGreyLight: hsl(0, 0%, 44%);
-  --colorGreyLighter: hsl(0, 0%, 70%);
-  --colorGreyLightest: hsl(0, 0%, 94%);
+  --colorGreyLight: hsl(0, 0%, 50%);
+  --colorGreyLighter: hsl(0, 0%, 80%);
+  --colorGreyLightest: hsl(60, 1%, 92%);
 
   --colorLinenDark: hsl(35, 10%, 60%);
   --colorLinenDefault: hsl(35, 10%, 85%);
   --colorLinenLight: hsl(35, 30%, 86%);
   --colorLinenLighter: hsl(35, 50%, 92%);
 
-  --backgroundColor: var(--colorLinen);
-  --backgroundOverlayColor: hsl(0, 0%, 100%, 0.4);
+  --backgroundColor: var(--colorGreyLightest);
+  --computedBackgroundColor: var(--backgroundColor);
+
   --textColor: var(--colorBlack);
   --colorFaded: var(--colorGreyLight);
 
-  --fontFamilySerif: CNW, Georgia, 'Times New Roman', Times, serif;
+  --boxShadow: 0px 2px 2px rgba(0, 0, 0, 0.01), 0px 3px 3px rgba(0, 0, 0, 0.015),
+    0px 8px 8px rgba(0, 0, 0, 0.02), 0px 24px 24px rgba(0, 0, 0, 0.03);
+
+  --fontFamilySerif: 'Signifier', CNW, Georgia, 'Times New Roman', Times, serif;
   --fontFamilySansSerif: USW, -apple-system, sans-serif;
   --fontFamilySystem: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -57,7 +61,6 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --backgroundColor: hsl(0, 0%, 10%);
-    --backgroundOverlayColor: hsl(0, 0%, 100%, 0.05);
     --textColor: var(--colorLinenLight);
     --computedBackgroundColor: hsl(0, 0%, 15%);
   }
