--- a/src/css/_settings.css
+++ b/src/css/_settings.css
@@ -24,7 +24,7 @@
   --boxShadow: 0px 2px 2px rgba(0, 0, 0, 0.01), 0px 3px 3px rgba(0, 0, 0, 0.015),
     0px 8px 8px rgba(0, 0, 0, 0.02), 0px 24px 24px rgba(0, 0, 0, 0.03);
 
-  --fontFamilySerif: 'Signifier', CNW, Georgia, 'Times New Roman', Times, serif;
+  --fontFamilySerif: SNF, Georgia, 'Times New Roman', Times, serif;
   --fontFamilySansSerif: USW, -apple-system, sans-serif;
   --fontFamilySystem: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
