--- a/src/components/404.css
+++ b/src/components/404.css
@@ -48,7 +48,6 @@
 
 .VideoOverlay {
   align-items: flex-end;
-  cursor: pointer;
   display: flex;
   height: 100%;
   justify-content: flex-end;
@@ -58,17 +57,18 @@
   width: 100%;
 }
 
-.VideoOverlay-icons {
+.VideoOverlay-muteToggle {
   align-items: center;
   background-color: hsl(31, 25%, 62%);
+  border: none;
   border-radius: 1.5rem;
+  cursor: pointer;
   display: flex;
   height: 1.75rem;
   justify-content: center;
   margin: 0.75rem;
   mix-blend-mode: screen;
   opacity: 0.8;
-  pointer-events: none;
   position: relative;
   width: 1.75rem;
 
