--- a/src/components/MobileNav.css
+++ b/src/components/MobileNav.css
@@ -8,7 +8,9 @@
 
   align-items: center;
   appearance: none;
+  background-color: transparent;
   border: none;
+  color: inherit;
   cursor: pointer;
   display: flex;
   height: 4rem;
