Fix typo, sort imports

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,9 +21,8 @@ const description = `I've been building on the web for 15 years, helping compani
   <main>
     <section>
       <p>
-        I&apos;ve been building on the web for 15 years, helping companies like Apple, Google,
-        Twitter, and the American Music Awards create beautiful and useful experiences for their
-        users.
+        I've been building on the web for 15 years, helping companies like Apple, Google, Twitter,
+        and the American Music Awards create beautiful and useful experiences for their users.
       </p>
 
       <p>
@@ -33,8 +32,8 @@ const description = `I've been building on the web for 15 years, helping compani
       </p>
 
       <p>
-        Here you&apos;ll find a medley of writing and side projects that explore software, design,
-        architecture, and the internet of things.{' '}
+        Here you'll find a medley of writing and side projects that explore software, design,
+        architecture, and the internet of things.
       </p>
     </section>
 
