--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,13 +3,15 @@ import { getCollection } from 'astro:content';
 
 import { Header, PageNotFound } from 'src/components';
 import Layout from 'src/layouts/Layout.astro';
+import { filterEntriesByStatus } from 'src/utils/filterEntriesByStatus';
 import { mapEntryEssentials } from 'src/utils/mapEntryEssentials';
 import { sortEntriesByDate } from 'src/utils/sortEntriesByDate';
 
 const writing = await getCollection('writing');
 const projects = await getCollection('projects');
 const sortedEntries = sortEntriesByDate([...writing, ...projects]);
-const entries = mapEntryEssentials(sortedEntries);
+const liveEntries = filterEntriesByStatus(sortedEntries, 'live');
+const entries = mapEntryEssentials(liveEntries);
 ---
 
 <Layout metaTitle="404: Page Not Found" metaDescription="404: Page Not Found">
