--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -3,6 +3,7 @@ import { getCollection } from 'astro:content';
 import { Header, Hero, Pagination } from 'src/components';
 import Image from 'src/components/RawImage.astro';
 import Layout from 'src/layouts/Layout.astro';
+import { filterEntriesByStatus } from 'src/utils/filterEntriesByStatus';
 import { isImage } from 'src/utils/isImage';
 import { mapEntryEssentials } from 'src/utils/mapEntryEssentials';
 import { sortEntriesByDate } from 'src/utils/sortEntriesByDate';
@@ -11,19 +12,18 @@ export async function getStaticPaths() {
   const writing = await getCollection('writing');
   const projects = await getCollection('projects');
   const sortedEntries = sortEntriesByDate([...writing, ...projects]);
-  const entries = mapEntryEssentials(sortedEntries);
+  const liveEntries = filterEntriesByStatus(sortedEntries, 'live');
+  const entries = mapEntryEssentials(liveEntries);
 
-  return sortedEntries
-    .filter((entry) => entry.data.status === 'live')
-    .map((entry, index) => {
-      const prev = sortedEntries[index + 1] || null;
-      const next = sortedEntries[index - 1] || null;
+  return liveEntries.map((entry, index) => {
+    const prev = liveEntries[index + 1] || null;
+    const next = liveEntries[index - 1] || null;
 
-      return {
-        params: { slug: `${entry.collection}/${entry.slug}` },
-        props: { entry, prev, next, entries },
-      };
-    });
+    return {
+      params: { slug: `${entry.collection}/${entry.slug}` },
+      props: { entry, prev, next, entries },
+    };
+  });
 }
 
 const { entry, prev, next, entries } = Astro.props;
