--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,13 +5,15 @@ import PostImage from 'src/components/PostImage.astro';
 import PostVideo from 'src/components/PostVideo.astro';
 import { linkList } from 'src/content/social/linkList';
 import Layout from 'src/layouts/Layout.astro';
+import { filterEntriesByStatus } from 'src/utils/filterEntriesByStatus';
 import { mapEntryEssentials } from 'src/utils/mapEntryEssentials';
 import { sortEntriesByDate } from 'src/utils/sortEntriesByDate';
 
 const writing = await getCollection('writing');
 const projects = await getCollection('projects');
 const sortedEntries = sortEntriesByDate([...writing, ...projects]);
-const entries = mapEntryEssentials(sortedEntries);
+const liveEntries = filterEntriesByStatus(sortedEntries, 'live');
+const entries = mapEntryEssentials(liveEntries);
 
 const description = `I've been building on the web for 15 years, helping companies like Apple, Google, Twitter, and the American Music Awards create beautiful and useful experiences for their users.`;
 ---
