--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,10 +2,9 @@
 import { Container, Footer } from 'src/components';
 import 'src/styles/_settings.css';
 import 'src/styles/animations.css';
-import 'src/styles/elements.css';
+import 'src/styles/base.css';
 import 'src/styles/fonts.css';
-import 'src/styles/footnotes.css';
-import 'src/styles/prism-theme.css';
+import 'src/styles/utilities.css';
 import { stripTags } from 'src/utils/stripTags';
 
 const { metaTitle, metaDescription, metaImage, metaSlug } = Astro.props;
