--- a/src/styles/_settings.css
+++ b/src/styles/_settings.css
@@ -1,5 +1,5 @@
 :root {
-  --colorBlack: hsl(0, 0%, 16%);
+  --colorBlack: hsl(0, 0%, 10%);
   --colorWhite: hsl(0, 0%, 95%);
   --colorHighlight: hsl(48, 24%, 94%);
 
@@ -15,7 +15,7 @@
   --colorLinenLight: hsl(35, 30%, 86%);
   --colorLinenLighter: hsl(35, 50%, 92%);
 
-  --backgroundColor: var(--colorGreyLightest);
+  --backgroundColor: hsl(60, 2%, 98%);
   --computedBackgroundColor: var(--backgroundColor);
 
   --textColor: var(--colorBlack);
@@ -24,14 +24,14 @@
   --boxShadow: 0px 2px 2px rgba(0, 0, 0, 0.01), 0px 3px 3px rgba(0, 0, 0, 0.015),
     0px 8px 8px rgba(0, 0, 0, 0.02), 0px 24px 24px rgba(0, 0, 0, 0.03);
 
-  --fontFamilySerif: SNF, Georgia, 'Times New Roman', Times, serif;
-  --fontFamilySansSerif: USW, -apple-system, sans-serif;
-  --fontFamilySystem: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --fontFamilySystem: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Helvetica Neue', sans-serif;  
+  --fontFamilySans: 'Söhne', var(--fontFamilySystem);
+  --fontFamilyMono: 'Söhne Mono', Monacao, monospace;
+  --fontFamilySerif: 'EB Garamond', Georgia, serif;
 
   --fontSizeSmallest: 0.8rem;
-  --fontSizeSmaller: 0.8rem;
-  --fontSizeSmall: 0.9rem;
+  --fontSizeSmaller: 13px;
+  --fontSizeSmall: 15px;
   --fontSizeDefault: 1rem;
   --fontSizeMedium: 1.125rem;
   --fontSizeLarge: 1.125rem;
@@ -50,14 +50,6 @@
   --maxWidth: 700px;
 
   --glowSize: 1200px;
-}
-
-@media (min-width: 480px) {
-  :root {
-    --fontSizeSmallest: 0.6rem;
-    --fontSizeSmaller: 0.7rem;
-    --fontSizeSmall: 0.8rem;
-  }
 }
 
 @media (prefers-color-scheme: dark) {
