--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,5 +1,6 @@
-/* TODO: Tidy, annotate, and consolidate */
+@import url('./_breakpoints.css');
 
+/* Reset and base styles */
 *,
 *::before,
 *::after {
@@ -7,35 +8,30 @@
 }
 
 html,
-body {
-  font-family: var(--fontFamilySerif);
-  font-size: 16px;
+body {  
   margin: 0;
   min-height: 100%;
   transition: background-color, color var(--transitionSlow);
 }
 
-@media (min-width: 800px) {
-  html,
-  body {
-    font-size: 20px;
-  }
-}
-
 html {
   background-color: var(--backgroundColor);
+  color: var(--textColor);
+  font-family: var(--fontFamilySans);
+  font-feature-settings: "kern" 1;
+  font-size: 16px;
+  -webkit-font-smoothing: antialiased;
+  line-height: 1.5;
+  text-rendering: optimizeLegibility;
   -webkit-text-size-adjust: 100%;
 }
 
-body {
-  color: var(--textColor);
-  font-feature-settings: 'clig', 'kern', 'liga', 'onum', 'pnum', 'ss01';
-  line-height: 1.5;
+body {  
   min-height: 100vh;
-  text-rendering: optimizeLegibility;
 }
 
-@media (min-width: 480px) {
+/* Add top border to body */
+@media (--sm) {
   body::before {
     background-color: currentColor;
     content: '';
@@ -48,6 +44,7 @@ body {
   }
 }
 
+/* Typography */
 h1,
 h2,
 h3,
@@ -62,27 +59,35 @@ h6 {
 
 h1 {
   align-self: flex-end;
+  color: black;
   font-family: var(--fontFamilySerif);
+  font-feature-settings: 'clig', 'kern', 'liga', 'onum', 'pnum';
   font-size: var(--fontSizeLargest);
-  font-weight: 700;
-  line-height: 1.05;
+  font-size: 64px !important;
+  font-weight: 700 !important;
+  letter-spacing: -0.03em !important;
+  line-height: 1.0 !important;
   margin: 0;
+  margin: auto;
   position: relative;
   text-shadow: none;
+  text-transform: none;
+  width: 80% !important;
 }
 
 h2 {
-  font-family: var(--fontFamilySerif);
-  font-size: var(--fontSizeLarger);
-  font-weight: 500;
-  line-height: 1.1;
+  color: hsl(0, 0%, 10%);
+  font-size: var(--fontSizeLarge);
+  font-weight: 600;
+  line-height: 1.5;
+  margin-bottom: 1.125rem;
+  padding-top: 1.875rem;
 }
 
 h3 {
-  font-family: var(--fontFamilySerif);
-  font-size: var(--fontSizeLarge);
-  font-size: 1.25rem;
-  font-weight: 400;
+  color: hsl(0, 0%, 10%);
+  font-size: 1rem;
+  font-weight: 500;
   line-height: 1.25;
 }
 
@@ -92,19 +97,40 @@ h4 {
 }
 
 h5 {
-  font-family: var(--fontFamilySerif);
   font-size: var(--fontSizeMedium);
   font-weight: 500;
   line-height: 1.25;
 }
 
 h6 {
-  color: var(--colorGreyDark);
-  font-family: var(--fontFamilySansSerif);
+  color: var(--colorGreyDarker);
   font-size: var(--fontSizeSmall);
-  font-weight: 500;
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 1.5rem;
 }
 
+/* Links */
+a {
+  color: inherit;
+  text-decoration-color: var(--colorGreyDark);
+  transition: color, text-decoration-color var(--transitionFast);
+}
+
+a:hover {
+  text-decoration-color: var(--colorBlack);
+}
+
+@media (prefers-color-scheme: dark) {
+  a:hover {
+    color: var(--colorGreyLightest);
+    text-decoration-color: currentColor;
+  }
+}
+
+
+
+/* Sections */
 section {
   margin-bottom: var(--spaceDefault);
 }
@@ -115,6 +141,7 @@ section {
   }
 }
 
+/* Paragraphs and lists */
 p,
 ol {
   color: var(--colorGreyDarker);
@@ -125,33 +152,25 @@ ol {
 @media (min-width: 800px) {
   p,
   ol {
-    color: var(--colorGreyDark);
-    font-size: 0.95rem;
+    color: var(--colorGreyDarker);
+    font-size: 16px;
+    /* font-size: 0.95rem; */
     font-variant-ligatures: common-ligatures;
     line-height: 1.75;
+    margin-bottom: 1rem;
   }
 
   code {
-    background-color: hsla(0, 0%, 100%, 0.8);
-    font-family: JBM, monospace;
-    font-size: 0.8em;
-    padding-left: 0.25em;
-    padding-right: 0.25em;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    color: var(--colorLinenDefault);
+    /* background-color: oklch(84.71% 0.3596 144.81); */
+    font-family: var(--fontFamilyMono);
+    font-size: 14px;
+    -webkit-font-smoothing: subpixel-antialiased;
+    /* padding-left: 0.25em; */
+    /* padding-right: 0.25em; */
   }
 
-  p {
-    color: inherit;
+  pre {
+    line-height: 20.5px !important;
   }
 }
 
@@ -179,63 +198,7 @@ li {
   margin-bottom: 0.25rem;
 }
 
-a {
-  color: inherit;
-  text-decoration-color: var(--colorGreyDark);
-  transition: color, text-decoration-color var(--transitionFast);
-}
 
-a:hover {
-  text-decoration-color: var(--colorBlack);
-}
-
-@media (prefers-color-scheme: dark) {
-  a:hover {
-    color: var(--colorGreyLightest);
-    text-decoration-color: currentColor;
-  }
-}
-
-a[target='_blank'] {
-  font-variant-numeric: tabular-nums;
-  transition: color, opacity var(--transitionFast);
-  will-change: color, opacity;
-}
-
-a[target='_blank']::after {
-  content: '↯';
-  display: inline-block;
-  opacity: 0.4;
-  position: absolute;
-  transform: rotate(225deg) translateY(0.2rem) translateX(-0.2rem);
-  transition: color, opacity var(--transitionSlow);
-  will-change: color, opacity;
-}
-
-a[target='_blank']:hover {
-  color: var(--colorGreyDarker);
-}
-
-a[target='_blank']:hover::after {
-  opacity: 1;
-  transition: color, opacity var(--transitionFast);
-}
-
-a[href*='instagram']:hover::after {
-  color: #833ab4;
-}
-
-a[href*='twitter']:hover::after {
-  color: #1da1f2;
-}
-
-a[href*='github']:hover::after {
-  color: #4ac26b;
-}
-
-a[href*='linkedin']:hover::after {
-  color: #0077b5;
-}
 
 img,
 video {
@@ -266,25 +229,39 @@ blockquote {
 
 blockquote::before {
   color: var(--colorGreyLighter);
+  color: black;
   content: '“';
   font-family: var(--fontFamilySerif);
-  font-size: 3rem;
-  font-weight: 400;
+  font-size:  2.5rem;
+  font-weight: 700;
   left: 0;
+  margin-left: 2rem;
   position: absolute;
-  top: -1rem;
+  top: 0.75rem;
 }
 
 blockquote p {
+  color: black;
   display: inline;
+  display: block;
   font-family: var(--fontFamilySerif);
   font-size: var(--fontSizeLarge);
+  font-size: 28px;
+  font-weight: 700;
+  letter-spacing: -0.03em;
   line-height: 1.25;
+  margin: auto;
+  margin-bottom: 0.5rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  text-align: center;
 }
 
-@media (min-width: 800px) {
+@media (--md) {
   blockquote {
+    padding-bottom: 1rem;
     padding-left: 0;
+    padding-top: var(--spaceDefault);
   }
 
   blockquote::before {
@@ -309,4 +286,20 @@ textarea {
   font-size: 100%;
   line-height: 1;
   margin: 0;
+}
+
+/* Dark mode */
+@media (prefers-color-scheme: dark) {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    color: var(--colorLinenDefault);
+  }
+
+  p {
+    color: inherit;
+  }
 }
