Remove Caption from Swatches and tweak spacing

--- a/src/content/projects/hue-gallery/Swatches.css
+++ b/src/content/projects/hue-gallery/Swatches.css
@@ -1,4 +1,4 @@
-@import 'src/styles/_breakpoints.css';
+@import url('src/styles/_breakpoints.css');
 
 .SwatchContainer {
   display: flex;
@@ -10,7 +10,8 @@
 
 @media (--md) {
   .SwatchContainer {
-    margin-top: calc(-1 * var(--spaceMedium));
+    margin-bottom: var(--spaceMedium);
+    margin-top: -3rem;
   }
 }
 
