--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -24,25 +24,28 @@
 }
 
 .Header-logo {
-  font-family: var(--fontFamilySansSerif);
-  font-size: var(--fontSizeSmall);
-  font-weight: 500;
+  font-size: 16px;
+  font-weight: 600;
   line-height: 1.5;
   margin-bottom: 0;
   padding-top: 0;
   position: relative;
-  z-index: 10;
+  z-index: 10
+
 }
 
 .Header-logo span {
   color: var(--colorGreyLight);
   display: block;
+  font-family: var(--fontFamilySans);
+  font-size: var(--fontSizeSmall);
   font-weight: 400;
+  text-transform: none;
 }
 
 @media (--md) {
   .Header {
-    margin-bottom: calc(var(--spaceMedium) - 0.5rem);
+    margin-bottom: calc(var(--spaceMedium));
     padding-top: calc(var(--spaceMedium) + 4px);
   }
 }
@@ -68,8 +71,10 @@
 .HeroContainer-Date {
   color: var(--colorGreyLight);
   display: block;
-  font-family: var(--fontFamilySansSerif);
+  display: none;
   font-size: var(--fontSizeSmaller);
+  font-weight: 500;
+  letter-spacing: 0.05em;
   margin-top: 1.5rem;
   text-transform: uppercase;
 }
@@ -83,7 +88,7 @@
 }
 
 .HeroContainer h1 br {
-  display: none;
+  /* display: none; */
 }
 
 @media (--sm) {
