--- a/src/components/PostVideo.astro
+++ b/src/components/PostVideo.astro
@@ -1,13 +1,13 @@
 ---
 import { Caption, Figure, Intrinsic } from 'src/components';
-import Video from './RawVideo.astro';
+import RawVideo from './RawVideo.astro';
 
 const { src, caption, size } = Astro.props;
 ---
 
 <Figure size={size}>
   <Intrinsic aspectRatio={{ base: '16 / 9' }}>
-    <Video src={src} />
+    <RawVideo src={src} />
   </Intrinsic>
 
   {caption && <Caption>{caption}</Caption>}
